[package]
name    = "influxdb"
version = "0.3.0"
authors = ["Leonhard Weber <leonhard.weber@voipir.cl>"]
edition = "2018"

[dependencies]
log        = {version = "*"}
serde      = {version = "^1", features = ["derive"]}
serde_json = {version = "^1"}
base64     = {version = "*"}
chrono     = {version = "*", features = ["serde"]}
reqwest    = {version = "*", features = ["blocking", "json"]}

[dev-dependencies]
flexi_logger = {version = "*"}
