[package]
name        = "influxc"
version     = "0.4.2"
edition     = "2018"
authors     = ["Leonhard Weber <leonhard.weber@voipir.cl>"]
license     = "MIT"
publish     = true
description = "InfluxDB Client Library"
keywords    = ["influx", "influxdb"]
homepage    = "https://github.com/voipir/rust-influxc"
repository  = "https://github.com/voipir/rust-influxc"

[dependencies]
log        = {version="*"}
serde      = {version="^1", features=["derive"]}
serde_json = {version="^1"}
base32     = {version="*"}
flate2     = {version="^1"}
base64     = {version="*"}
chrono     = {version="*", features=["serde"]}
reqwest    = {version="*", features=["blocking", "json"]}

[dev-dependencies]
flexi_logger = {version="*"}
